[tool.poetry]
name = "av-simulation-at-intersections"
version = "0.1.0"
description = "A Bi-level Framework for Modeling 2D Vehicular Movements and Interactions at Urban Junctions"
authors = ["Saeed Rahmani"]
readme = "README.md"
packages = [{include = "main"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.21.0"
matplotlib = "^3.5.0"
cvxpy = "^1.2.0"
tqdm = "^4.64.0"
networkx = "^2.8.0"

[tool.poetry.group.dev.dependencies]
# Optional dependencies for Prius motion primitives
gym = {version = "0.21.0", optional = true}
urdfenvs = {extras = ["scenes"], version = "^0.4.0", optional = true}

[tool.poetry.extras]
prius = ["gym", "urdfenvs"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
